# reputable_bot

./: .gitignore  .gitversion.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  system.txt
.gitea/workflows/: build.yaml  test.yaml
reputable_bot/: __main__.py  chat.py  dungeon.py  env.py  logging.py  main.py  ollama.py  routines.py  utils.py
sources/: genres.txt  systems.txt  worlds.txt
